syntax = "proto3";

package dice;

option java_package = "io.grpg.dice";
option java_multiple_files = true;
option java_outer_classname = "Dice";

service ThrowDiceService {
    rpc ThrowDice (AskValue) returns (GiveValue);
}

message AskValue {
    string ask = 1;
}

message GiveValue {
    int32 value = 1;
}